test/corpus/newlines.txt
================================================================================
Leading pipe continues the line
================================================================================

fn f() {
  let total =
    orders
    |> list::filter(_, is_paid)
    // a comment between pipeline steps
    |> list::fold(_, 0, add)
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (binary_expression
            (identifier)
            (call_expression
              (path_expression
                (module)
                (identifier))
              (arguments
                (wildcard)
                (identifier))))
          (comment)
          (call_expression
            (path_expression
              (module)
              (identifier))
            (arguments
              (wildcard)
              (integer)
              (identifier))))))))

================================================================================
Leading && and || continue the line
================================================================================

fn f() {
  let ok = is_valid(order)
    && has_stock(order)
    || is_backorder(order)
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (binary_expression
            (call_expression
              (identifier)
              (arguments
                (identifier)))
            (call_expression
              (identifier)
              (arguments
                (identifier))))
          (call_expression
            (identifier)
            (arguments
              (identifier))))))))

================================================================================
Leading minus starts a new statement
================================================================================

fn f() {
  let a = b
  -c
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (identifier))
      (unary_expression
        (identifier)))))

================================================================================
Trailing operator continues the line
================================================================================

fn f() {
  let a = b +
    c
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
Closing type argument ends the line
================================================================================

type Cell = Option<player::Player>
type Grid = List<List<Cell>>

fn index() -> map::Map<
  String,
  List<Int>,
> {
  map::new::<
    String,
    List<Int>,
  >()
}

--------------------------------------------------------------------------------

(source_file
  (type_alias
    (type_identifier)
    (named_type
      (type_identifier)
      (type_arguments
        (named_type
          (module)
          (type_identifier)))))
  (type_alias
    (type_identifier)
    (named_type
      (type_identifier)
      (type_arguments
        (named_type
          (type_identifier)
          (type_arguments
            (named_type
              (type_identifier)))))))
  (function_declaration
    (identifier)
    (parameters)
    (named_type
      (module)
      (type_identifier)
      (type_arguments
        (named_type
          (type_identifier))
        (named_type
          (type_identifier)
          (type_arguments
            (named_type
              (type_identifier))))))
    (block
      (call_expression
        (path_expression
          (module)
          (identifier)
          (turbofish
            (named_type
              (type_identifier))
            (named_type
              (type_identifier)
              (type_arguments
                (named_type
                  (type_identifier))))))
        (arguments)))))

================================================================================
Closure body inside call arguments
================================================================================

fn f() {
  list::map(xs, fn(x) {
    let y = x
    y
  })
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (call_expression
        (path_expression
          (module)
          (identifier))
        (arguments
          (identifier)
          (closure
            (parameters
              (parameter
                (identifier)))
            (block
              (let_statement
                (identifier)
                (identifier))
              (identifier))))))))

================================================================================
Line break after a continuing token
================================================================================

fn f() {
  let a =
    1
  let b = a +
    2
  use x <-
    g(b)
  case a,
    b {
    1, _ =>
      2
    _, _ => 3
  }
}

fn g(x: Int) ->
  Int {
  x
}

type Alias =
  Int

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (integer))
      (let_statement
        (identifier)
        (binary_expression
          (identifier)
          (integer)))
      (use_statement
        (use_binding
          (identifier))
        (call_expression
          (identifier)
          (arguments
            (identifier))))
      (case_expression
        (identifier)
        (identifier)
        (case_body
          (case_arm
            (integer)
            (wildcard)
            (integer))
          (case_arm
            (wildcard)
            (wildcard)
            (integer))))))
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (named_type
          (type_identifier))))
    (named_type
      (type_identifier))
    (block
      (identifier)))
  (type_alias
    (type_identifier)
    (named_type
      (type_identifier))))

================================================================================
Comment lines and blank lines between continued lines
================================================================================

fn f() {
  let a =
    // why

    1
  a

  // a comment line between statements

  |> g
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (comment)
        (integer))
      (binary_expression
        (identifier)
        (comment)
        (identifier)))))

================================================================================
Line breaks inside parentheses, brackets and type arguments
================================================================================

fn f() {
  let t = (a
    + b, c
    .d)
  let l = [1
    , 2]
  let m = map::new::<
    String
  >()
  g(fn(x)
  { x })
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (tuple_expression
          (binary_expression
            (identifier)
            (identifier))
          (field_expression
            (identifier)
            (identifier))))
      (let_statement
        (identifier)
        (list_expression
          (integer)
          (integer)))
      (let_statement
        (identifier)
        (call_expression
          (path_expression
            (module)
            (identifier)
            (turbofish
              (named_type
                (type_identifier))))
          (arguments)))
      (call_expression
        (identifier)
        (arguments
          (closure
            (parameters
              (parameter
                (identifier)))
            (block
              (identifier))))))))

================================================================================
Lists in braces span lines after commas
================================================================================

import std::io::{
  println,
  print,
}

type Point {
  x: Int,
  y: Int,
}

fn f() {
  let p = Point {
    x: 1,
    y: 2,
  }
  case p {
    Point {
      x,
      ..
    } => x
  }
}

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (module)
    (module)
    (import_list
      (import_item
        (identifier))
      (import_item
        (identifier))))
  (type_declaration
    (type_identifier)
    (field_list
      (field_declaration
        (identifier)
        (named_type
          (type_identifier)))
      (field_declaration
        (identifier)
        (named_type
          (type_identifier)))))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (record_expression
          (constructor)
          (field_initializer
            (identifier)
            (integer))
          (field_initializer
            (identifier)
            (integer))))
      (case_expression
        (identifier)
        (case_body
          (case_arm
            (constructor_pattern
              (constructor)
              (field_pattern
                (identifier)))
            (identifier)))))))

================================================================================
Blocks inside parentheses have significant line breaks
================================================================================

fn f() {
  g({
    let a = 1
    a
  })
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (call_expression
        (identifier)
        (arguments
          (block
            (let_statement
              (identifier)
              (integer))
            (identifier)))))))

================================================================================
Line breaks at the start and the end of the file
================================================================================



fn f() {
  1
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (integer))))

================================================================================
Line break before `=` in let
:error
================================================================================

fn f() {
  let x
    = 1
}

--------------------------------------------------------------------------------

================================================================================
Line break after `:` in let
:error
================================================================================

fn f() {
  let x:
    Int = 1
}

--------------------------------------------------------------------------------

================================================================================
Line break after a keyword
:error
================================================================================

pub
fn f() {
  1
}

--------------------------------------------------------------------------------

================================================================================
Line break after `fn`
:error
================================================================================

fn
f() {
  1
}

--------------------------------------------------------------------------------

================================================================================
Line break before parameters
:error
================================================================================

fn f
() {
  1
}

--------------------------------------------------------------------------------

================================================================================
Line break before a function body
:error
================================================================================

fn f() -> Int
{
  1
}

--------------------------------------------------------------------------------

================================================================================
Line break before `->`
:error
================================================================================

fn f()
  -> Int {
  1
}

--------------------------------------------------------------------------------

================================================================================
Line break after unary minus
:error
================================================================================

fn f() {
  let y = -
    1
}

--------------------------------------------------------------------------------

================================================================================
Line break before a closure body
:error
================================================================================

fn f() {
  let g = fn(x)
  {
    x
  }
}

--------------------------------------------------------------------------------

================================================================================
Line break before a case body
:error
================================================================================

fn f() {
  case x
  {
    _ => 1
  }
}

--------------------------------------------------------------------------------

================================================================================
Line break before `=>`
:error
================================================================================

fn f() {
  case x {
    1
      => 2
  }
}

--------------------------------------------------------------------------------

================================================================================
Line break before `when`
:error
================================================================================

fn f() {
  case x {
    a
      when a > 1 => 2
  }
}

--------------------------------------------------------------------------------

================================================================================
Line break after `when`
:error
================================================================================

fn f() {
  case x {
    a when
      a > 1 => 2
  }
}

--------------------------------------------------------------------------------

================================================================================
Line break after `|` in a pattern
:error
================================================================================

fn f() {
  case x {
    1 |
      2 => 3
  }
}

--------------------------------------------------------------------------------

================================================================================
Line break before `<-`
:error
================================================================================

fn f() {
  use x
    <- g()
}

--------------------------------------------------------------------------------

================================================================================
Line break before `,` in braces
:error
================================================================================

fn f() {
  let p = P { x: 1
    , y: 2 }
}

--------------------------------------------------------------------------------

================================================================================
Line break after `:` in a record
:error
================================================================================

fn f() {
  let p = P { x:
    1 }
}

--------------------------------------------------------------------------------

================================================================================
Line break after `..` in a record
:error
================================================================================

fn f() {
  let p = P {..
    q }
}

--------------------------------------------------------------------------------

================================================================================
Line break after `::`
:error
================================================================================

fn f() {
  let m = map::
    new()
}

--------------------------------------------------------------------------------

================================================================================
Line break before `=` in a type alias
:error
================================================================================

type T
  = Int

--------------------------------------------------------------------------------

================================================================================
Line break before `=` in a const
:error
================================================================================

const x
  = 1

--------------------------------------------------------------------------------

================================================================================
Line break after `+` in bounds
:error
================================================================================

interface I: Show +
  Eq

--------------------------------------------------------------------------------

================================================================================
Line break before a test body
:error
================================================================================

test "x"
{
  assert True
}

--------------------------------------------------------------------------------
